--- a/angular-drakon/src/app/drakon/drakon.component.html
+++ b/angular-drakon/src/app/drakon/drakon.component.html
@@ -1,3 +1,8 @@
+
+
+<div class="container-fluid">
+  <!-- Content here -->
+
 <!--------- Cadastrar ITEM ---------->
 
 <br>
@@ -326,3 +331,5 @@
 	</div>
 </div>
 
+<!--------- TESTE ------------>
+</div>
