--- a/angular-drakon/src/app/drakon/drakon.component.html
+++ b/angular-drakon/src/app/drakon/drakon.component.html
@@ -1,12 +1,150 @@
 
+<div class="container">
+       <table class="table table-striped">
+          <tbody>
+             <tr>
+                <td colspan="1">
+                   <form class="well form-horizontal">
+                      <fieldset>
+                         <div class="form-group">
+                            <label class="col-md-4 control-label">Full Name</label>
+                            <div class="col-md-8 inputGroupContainer">
+                               <div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span><input id="fullName" name="fullName" placeholder="Full Name" class="form-control" required="true" value="" type="text"></div>
+                            </div>
+                         </div>
+                         <div class="form-group">
+                            <label class="col-md-4 control-label">Address Line 1</label>
+                            <div class="col-md-8 inputGroupContainer">
+                               <div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span><input id="addressLine1" name="addressLine1" placeholder="Address Line 1" class="form-control" required="true" value="" type="text"></div>
+                            </div>
+                         </div>
+                         <div class="form-group">
+                            <label class="col-md-4 control-label">Address Line 2</label>
+                            <div class="col-md-8 inputGroupContainer">
+                               <div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span><input id="addressLine2" name="addressLine2" placeholder="Address Line 2" class="form-control" required="true" value="" type="text"></div>
+                            </div>
+                         </div>
+                         <div class="form-group">
+                            <label class="col-md-4 control-label">City</label>
+                            <div class="col-md-8 inputGroupContainer">
+                               <div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span><input id="city" name="city" placeholder="City" class="form-control" required="true" value="" type="text"></div>
+                            </div>
+                         </div>
+                         <div class="form-group">
+                            <label class="col-md-4 control-label">State/Province/Region</label>
+                            <div class="col-md-8 inputGroupContainer">
+                               <div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span><input id="state" name="state" placeholder="State/Province/Region" class="form-control" required="true" value="" type="text"></div>
+                            </div>
+                         </div>
+                         <div class="form-group">
+                            <label class="col-md-4 control-label">Postal Code/ZIP</label>
+                            <div class="col-md-8 inputGroupContainer">
+                               <div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span><input id="postcode" name="postcode" placeholder="Postal Code/ZIP" class="form-control" required="true" value="" type="text"></div>
+                            </div>
+                         </div>
+                         <div class="form-group">
+                            <label class="col-md-4 control-label">Country</label>
+                            <div class="col-md-8 inputGroupContainer">
+                               <div class="input-group">
+                                  <span class="input-group-addon" style="max-width: 100%;"><i class="glyphicon glyphicon-list"></i></span>
+                                  <select class="selectpicker form-control">
+                                     <option>A really long option to push the menu over the edget</option>
+                                  </select>
+                               </div>
+                            </div>
+                         </div>
+                         <div class="form-group">
+                            <label class="col-md-4 control-label">Email</label>
+                            <div class="col-md-8 inputGroupContainer">
+                               <div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span><input id="email" name="email" placeholder="Email" class="form-control" required="true" value="" type="text"></div>
+                            </div>
+                         </div>
+                         <div class="form-group">
+                            <label class="col-md-4 control-label">Phone Number</label>
+                            <div class="col-md-8 inputGroupContainer">
+                               <div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span><input id="phoneNumber" name="phoneNumber" placeholder="Phone Number" class="form-control" required="true" value="" type="text"></div>
+                            </div>
+                         </div>
+                      </fieldset>
+                   </form>
+                </td>
+                <td colspan="1">
+                   <form class="well form-horizontal">
+                      <fieldset>
+                         <div class="form-group">
+                            <label class="col-md-4 control-label">Full Name</label>
+                            <div class="col-md-8 inputGroupContainer">
+                               <div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span><input id="fullName" name="fullName" placeholder="Full Name" class="form-control" required="true" value="" type="text"></div>
+                            </div>
+                         </div>
+                         <div class="form-group">
+                            <label class="col-md-4 control-label">Address Line 1</label>
+                            <div class="col-md-8 inputGroupContainer">
+                               <div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span><input id="addressLine1" name="addressLine1" placeholder="Address Line 1" class="form-control" required="true" value="" type="text"></div>
+                            </div>
+                         </div>
+                         <div class="form-group">
+                            <label class="col-md-4 control-label">Address Line 2</label>
+                            <div class="col-md-8 inputGroupContainer">
+                               <div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span><input id="addressLine2" name="addressLine2" placeholder="Address Line 2" class="form-control" required="true" value="" type="text"></div>
+                            </div>
+                         </div>
+                         <div class="form-group">
+                            <label class="col-md-4 control-label">City</label>
+                            <div class="col-md-8 inputGroupContainer">
+                               <div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span><input id="city" name="city" placeholder="City" class="form-control" required="true" value="" type="text"></div>
+                            </div>
+                         </div>
+                         <div class="form-group">
+                            <label class="col-md-4 control-label">State/Province/Region</label>
+                            <div class="col-md-8 inputGroupContainer">
+                               <div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span><input id="state" name="state" placeholder="State/Province/Region" class="form-control" required="true" value="" type="text"></div>
+                            </div>
+                         </div>
+                         <div class="form-group">
+                            <label class="col-md-4 control-label">Postal Code/ZIP</label>
+                            <div class="col-md-8 inputGroupContainer">
+                               <div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span><input id="postcode" name="postcode" placeholder="Postal Code/ZIP" class="form-control" required="true" value="" type="text"></div>
+                            </div>
+                         </div>
+                         <div class="form-group">
+                            <label class="col-md-4 control-label">Country</label>
+                            <div class="col-md-8 inputGroupContainer">
+                               <div class="input-group">
+                                  <span class="input-group-addon" style="max-width: 100%;"><i class="glyphicon glyphicon-list"></i></span>
+                                  <select class="selectpicker form-control">
+                                     <option>A really long option to push the menu over the edget</option>
+                                  </select>
+                               </div>
+                            </div>
+                         </div>
+                         <div class="form-group">
+                            <label class="col-md-4 control-label">Email</label>
+                            <div class="col-md-8 inputGroupContainer">
+                               <div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span><input id="email" name="email" placeholder="Email" class="form-control" required="true" value="" type="text"></div>
+                            </div>
+                         </div>
+                         <div class="form-group">
+                            <label class="col-md-4 control-label">Phone Number</label>
+                            <div class="col-md-8 inputGroupContainer">
+                               <div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span><input id="phoneNumber" name="phoneNumber" placeholder="Phone Number" class="form-control" required="true" value="" type="text"></div>
+                            </div>
+                         </div>
+                      </fieldset>
+                   </form>
+                </td>
+             </tr>
+          </tbody>
+       </table>
+    </div>
 
-<div class="container-fluid">
-  <!-- Content here -->
 
-<!--------- Cadastrar ITEM ---------->
+
+<!--  ################     !--> 
+
 
 <br>
-<form #frm = "ngForm" (ngSubmit)="addItem(frm)" *ngIf="!toggleForm">
+<form #frm = "ngForm" (ngSubmit)="addItem(frm)" *ngIf="!toggleForm" class="form-group">
 	<h2>Cadastrar item</h2>
   <div class="form-row">
     <div class="form-group col-md-3">
@@ -195,6 +333,83 @@
 </h2>
 <br>
 
+
+
+<!------ Include the above in your HEAD tag ---------->
+<div class="container">
+  <div class="row">
+  <table id="" class="table table-striped table-bordered" style="width:100%">
+        <thead>
+            <tr>
+                <th><input type="checkbox" onclick="checkAll(this)"></th>
+                <th>Procedimento</th>
+                <th>N° Procedimento</th>
+                <th>Data Entrada</th>
+                <th>Investigado(a)</th>
+                <th>Substância</th>
+                <th>Qtd.</th>
+                <th>Und.</th>
+                <th>Laudo</th>
+                <th>Vara</th>
+                <th>N° Processo</th>
+                <th>Lacre</th>
+                <th>Data Autorização</th>
+                <th>Caixa</th>
+                <th>Ofício</th>
+                <th>Delegacia</th>
+                <th></th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody *ngFor = "let item of entorpecentesLista">
+            <tr>
+                <td><input type="checkbox" name=""></td>
+                <td class="text-center">{{item.procedimento}}</td>
+                <td class="text-center">{{item.n_proced}}</td>
+                <td class="text-center">{{item.data_entrada}}</td>
+                <td class="text-center">{{item.investigado}}</td>
+                <td class="text-center">{{item.substancia}}</td>
+                <td class="text-center">{{item.quant}}</td>
+                <td class="text-center">{{item.und}}</td>
+                <td class="text-center">{{item.laudo}}</td>
+                <td class="text-center">{{item.vara}}</td>
+                <td class="text-center">{{item.n_processo}}</td>
+                <td class="text-center">{{item.lacre}}</td>
+                <td class="text-center">{{item.data_autorizacao}}</td>
+                <td class="text-center">{{item.caixa}}</td>
+                <td class="text-center">{{item.oficio}}</td>
+                <td class="text-center">{{item.delegacia}}</td>
+                <td class="text-center"> <button type="button" name="button" class="btn btn-danger" (click)="deleteItem(item._id)">Excluir</button></td>
+                <td class="text-center"> <button type="button" name="buttonEdit" class="btn btn-primary" (click)="showEditForm(item)" [disabled]="toggleForm">Editar</button></td>
+            </tr>        
+        </tbody>
+        <tfoot>
+            <tr>
+              <th></th>
+                <th>Procedimento</th>
+                <th>N° Procedimento</th>
+                <th>Data Entrada</th>
+                <th>Investigado(a)</th>
+                <th>Substância</th>
+                <th>Qtd.</th>
+                <th>Und.</th>
+                <th>Laudo</th>
+                <th>Vara</th>
+                <th>N° Processo</th>
+                <th>Lacre</th>
+                <th>Data Autorização</th>
+                <th>Caixa</th>
+                <th>Ofício</th>
+                <th>Delegacia</th>
+                <th></th>
+                <th></th>
+            </tr>
+        </tfoot>
+    </table>
+  </div>
+</div>
+
+<!-- 
 <table class="table table-bordered table-striped">
   <thead>
     <tr>
@@ -271,65 +486,4 @@
    </tbody>
 </table>
 
-<!--------- LISTAR ITEM TESTE ---------->
-
-<br><br>
-<h2>
-	Lista de items:
-</h2>
-
-<div class="">
-	<div *ngFor = "let item of entorpecentesLista">
-
-		<div class="col-md-3">
-			{{item.userName}}
-		</div>
-		<div class="col-md-2">
-			{{item.procedimento}}
-		</div>
-		<div class="col-md-2">
-			{{item.n_proced}}
-		</div>
-		<div class="col-md-2">
-			{{item.quant}}
-		</div>
-		<div class="col-md-2">
-			{{item.und}}
-		</div>
-		<div class="col-md-2">
-			{{item.laudo}}
-		</div>
-		<div class="col-md-2">
-			{{item.vara}}
-		</div>
-		<div class="col-md-2">
-			{{item.n_processo}}
-		</div>
-		<div class="col-md-2">
-			{{item.lacre}}
-		</div>
-		<div class="col-md-2">
-			{{item.data_autorizacao}}
-		</div>
-		<div class="col-md-2">
-			{{item.caixa}}
-		</div>
-		<div class="col-md-2">
-			{{item.oficio}}
-		</div>
-		<div class="col-md-2">
-			{{item.delegacia}}
-		</div>
-
-		<div class="col-md-3">
-			<button type="button" name="button" class="btn btn-primary">Editar</button>
-		</div>
-			
-		<div class="col-md-3">
-			<button type="button" name="button" class="btn btn-danger" (click)="deleteItem(item._id)">Excluir</button>
-		</div>	
-	</div>
-</div>
-
-<!--------- TESTE ------------>
-</div>
+-->
